--- a/requirements.txt
+++ b/requirements.txt
@@ -25,11 +25,11 @@ build==1.2.1
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
-chainlit==1.0.506
+chainlit==1.1.306
 charset-normalizer==3.3.2
 chevron==0.14.0
 chroma-hnswlib==0.7.3
-chromadb==0.4.24
+chromadb==0.5.0
 click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
@@ -54,14 +54,15 @@ filetype==1.2.0
 Flask==3.0.3
 Flask-Cors==4.0.0
 flatbuffers==24.3.25
+fpdf==1.7.2
 frozenlist==1.4.1
 fsspec==2024.3.1
-google-api-core==2.19.0
+google-api-core==2.19.1
 google-api-python-client==2.127.0
 google-auth==2.29.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
-googleapis-common-protos==1.63.0
+googleapis-common-protos==1.56.4
 greenlet==3.0.3
 grpcio==1.62.1
 h11==0.14.0
@@ -89,7 +90,7 @@ jupyterlab_pygments==0.3.0
 kubernetes==29.0.0
 lancedb==0.3.6
 Lazify==0.4.0
-literalai==0.0.509
+literalai==0.0.607
 llama-index==0.10.29
 llama-index-agent-openai==0.1.7
 llama-index-cli==0.1.11
@@ -160,7 +161,7 @@ posthog==3.5.0
 prettytable==3.10.0
 prompt-toolkit==3.0.36
 proto-plus==1.23.0
-protobuf==4.25.3
+protobuf==3.20.0
 ptyprocess==0.7.0
 pulsar-client==3.4.0
 pure-eval==0.2.2
@@ -169,13 +170,13 @@ pyarrow==15.0.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
-pydantic==2.6.4
+pydantic==2.8.2
 pydantic-settings==2.2.1
-pydantic_core==2.16.3
+pydantic_core==2.20.1
 Pygments==2.17.2
 PyJWT==2.8.0
 pylance==0.8.21
-pymemgpt==0.3.16
+pymemgpt==0.3.19
 PyMuPDF==1.24.1
 PyMuPDFb==1.24.1
 pyparsing==3.1.2
